# Tecplot3DSolutionWriter

./: .gitignore  CMakeLists.txt  README.md
app/: data.cc  grid.cc
inc/: tec.h
src/: tec.cc
